--- a/projeto_03/pousada.html
+++ b/projeto_03/pousada.html
@@ -1,11 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pousada Secreta</title>
 </head>
+
 <body>
-    
+    <header class="topo">
+        <div class="flex">
+            <div class="link-principal">
+                <a href="pousada.html">Pousada <span>Secreta</span></a>
+            </div>
+            <div class="link-nav">
+                <a href="#sobre">Sobre</a>
+                <a href="#rota">Rota</a>
+                <a href="./pousadaQuartos.html">Quartos</a>
+            </div>
+        </div>
+    </header>
+    <div class="container-banner">
+        <div class="texto">
+            <h1>Pousada Secreta</h1>
+            <p>A pousada reservada em Angra dos Reis</p>
+        </div>
+    </div>
+    <div class="container-bem-vindo">
+        <div class="texto">
+            <h2>Seja bem-vindo(a)!</h2>
+            <p>Relaxe em nossas acomodações e curta o melhor de Angra dos Reis.</p>
+            <p>Temos quartos para solteiro, casal ou família.</p>
+        </div>
+        <div class="container-img">
+            <div class="img1">
+                <img src="./assets/img/quarto-solteiro1.jpg" alt="quanto solteiro">
+                <a href="#">Quarto de solteiro</a>
+            </div>
+            <div class="img1">
+                <img src="./assets/img/quarto-casal1.jpg" alt="quanto solteiro">
+                <a href="#">Quarto de casal</a>
+            </div>
+            <div class="img1">
+                <img src="./assets/img/quarto-familia1.jpg" alt="quanto solteiro">
+                <a href="#">Quarto família</a>
+            </div>
+        </div>
+    </div>
+    <div id="rota">
+        <div class="texto">
+            <h2>Rota</h2>
+            <p>Veja como chegar até a pousada.</p>
+        </div>
+        <div class="mapa">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2368.862031393059!2d-60.18844226391376!3d-3.111852636577427!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x926c0d5e1a887169%3A0x378e8d9027cc47e4!2sUiara%20Amazon%20Resort!5e0!3m2!1spt-BR!2sbr!4v1696109986688!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </div>
+    <div id="sobre">
+        <div class="texto">
+            <h2>Sobre a pousada!</h2>
+            <p>Conheça um pouco sobre nossa pousada.</p>
+        </div>
+        <div class="container-colums">
+            <div class="info-01">
+                <div class="text">
+                    <h3>A pousada</h3>
+                    <p>A Pousada Dev dispõe de estacionamento privativo gratuito, piscina ao ar livre e bar.
+                    </p>
+                    <img src="./assets/img/img1.jpg" alt="">
+                </div>
+            </div>
+            <div class="info-01">
+                <div class="text">
+                    <h3>Nossos quartos</h3>
+                    <p>Os quartos possuem TV de tela plana a cabo, cozinha compacta e área para refeições. Além disso, as unidades da Pousada Dev contam com ar-condicionado e guarda-roupa.
+                    </p>
+                </div>
+                <img src="./assets/img/img2.jpg" alt="">
+            </div>
+            <div class="info-01">
+                <div class="text">
+                    <h3>Alimentação</h3>
+                    <p>A pousada serve café da manhã em estilo continental ou buffet.Nossos restaurantes funcionam 24hrs</p>
+                    </p>
+                </div>
+                <img src="./assets/img/img3.jpg" alt="">
+            </div>
+            <div class="info-01">
+                <div class="text">
+                    <h3>Recepção</h3>
+                    <p>Nossos restaurantes funcionam 24hrs</p>
+                    </p>
+                </div>
+                <img src="./assets/img/img4.jpg" alt="">
+            </div>
+        </div>
+    </div>
+    <footer class="footer">
+        <div class="contato">
+            <p>Entre em contato conosco:</p>
+            
+            <p>
+                <span><img src="./assets/img/icones/endereco.png" alt="endereço"></span> Endereço Av. 123, 222 - Rio de Janeiro RJ
+            </p>
+
+            <p><span><img src="./assets/img/icones/telefone.png" alt="telefone"></span> Cel: 5521000000000</p>
+
+            <p><span><img src="./assets/img/icones/calendario.png" alt="calendario"></span> Faça sua reserva pelo Booking.com</p>
+        </div>
+        <div class="copy">
+            <p>© Copyright - PousadaDev</p>
+        </div>
+    </footer>
 </body>
+
 </html>
